--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ canvas {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgb(111,49,152);
+    background-color: white;
+    /* background-color: rgb(111,49,152); */
+    background-image: url(/img/background.png);
 }
 
 h2{
